--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <a href="index.html"><i class="fa-solid fa-house fa-2x"></i></a>
     </div>
     <div id="headerMid">
-        <h1>¡Krav Maga Europe!</h1>
+        <h1>¡Savate, Kickboxing! Colombia Warriors</h1>
     </div>
     <div id="headerRight">
-        <!-- <button><i class="fa-solid fa-book fa-2x"></i></button>
+        <button><i class="fa-solid fa-book fa-2x"></i></button>
         <button><i class="fa-solid fa-arrow-up-from-bracket fa-2x"></i></button>
         <button><i class="fa-solid fa-bell fa-2x"></i></button>
-        <button><i class="fa-solid fa-ellipsis-vertical fa-2x"></i></button> -->
+        <button><i class="fa-solid fa-ellipsis-vertical fa-2x"></i></button>
     </div>
 </div>
 <!--header end-->
@@ -44,7 +44,7 @@
             <img src="images/ufc1.jpg" alt="KRAV" />
         </div>
         <div class="slide">
-            <img src="images/arteMarcial2.jpg" alt="MMA" />
+            <img src="images/colombia3.jpg" alt="MMA" />
         </div>
         <!--navigation auto start-->
         <div class="autoNav">
@@ -68,19 +68,29 @@
 <div id="information">
     <h2>¿Quienes somos?</h2>
     <p>Somos un grupo interesado en ofrecerte la mejor calidad de servicio y educar en las <strong>Artes Marciales Mixtas</strong>, además de pulir tus habilidades de defensa personal y autocontrol.</p>
-    <img src="images/arteMarcial1.jpg" alt="MMA" />
+    <div class="images-change">
+
+        <img src="images/arteMarcial1.jpg" class="pro" alt="MMA" />
+        <img src="images/martialArt1.jpg" class="sdo" alt="MMA" />
+
+    </div>
     <div id="contact">
         <p>¡Contactanos ahora! <a href="contact.html">Haz click aqui</a></p>
     </div>
 </div>
 <!--information end-->
+<div class="awards-section">
+    <a href="awards.html">Nuestros reconocimientos</a>
+</div>
 <div id="socialNetwork">
     <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a>
     <a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
     <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
     <a href="#"><i class="fa-brands fa-tiktok fa-3x"></i></a>
 </div>
-<div id="copyright"><p>Krav Maga Europe Team &#169;</p></div>
+<div id="copyright">
+    <p>Krav Maga Europe Team &#169;</p>
+</div>
 <script src="javascript/index.js"></script>
 </body>
 </html>
