--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
         <a href="index.html"><i class="fa-solid fa-house fa-2x"></i></a>
     </div>
     <div id="headerMid">
-        <h1>¡Krav Maga Europe!</h1>
+        <h1>¡Savate, Kickboxing! Colombia Warriors</h1>
     </div>
     <div id="headerRight">
-        <!-- <button><i class="fa-solid fa-book fa-2x"></i></button>
+        <button><i class="fa-solid fa-book fa-2x"></i></button>
         <button><i class="fa-solid fa-arrow-up-from-bracket fa-2x"></i></button>
         <button><i class="fa-solid fa-bell fa-2x"></i></button>
-        <button><i class="fa-solid fa-ellipsis-vertical fa-2x"></i></button> -->
+        <button><i class="fa-solid fa-ellipsis-vertical fa-2x"></i></button>
     </div>
 </div>
 <!--header end-->
@@ -30,7 +30,7 @@
 <div id="wrapper">
     <div id="carousel">
         <div class="slide first">
-            <img src="images/arteMarcial3.jpg" alt="MMA" />
+            <img src="images/colombia1.jpg" alt="MMA" />
         </div>
         <div class="slide">
             <img src="images/gym1.jpg" alt="GYM" />
@@ -39,14 +39,16 @@
             <img src="images/gym2.jpg" alt="GYM" />
         </div>
         <div class="slide">
-            <img src="images/mma1.jpeg" alt="MMA" />
+            <img src="images/colombia2.jpg" alt="MMA" />
         </div>
     </div>
 </div>
 <!--contact information start-->
 <!--iframe location start-->
-<div id="location">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15909.145954850967!2d-75.6636244!3d4.5423656!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f5dca6817fcf%3A0xc4f4ebda165b0432!2sComando%20elite%20GYM-KME!5e0!3m2!1ses!2sco!4v1713647373878!5m2!1ses!2sco" loading="lazy"></iframe>
+<div class="background1">
+    <div id="location">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15909.145954850967!2d-75.6636244!3d4.5423656!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f5dca6817fcf%3A0xc4f4ebda165b0432!2sComando%20elite%20GYM-KME!5e0!3m2!1ses!2sco!4v1713647373878!5m2!1ses!2sco" loading="lazy"></iframe>
+    </div>
 </div>
 <!--iframe location end-->
 <div id="contactBlock">
@@ -61,6 +63,9 @@
     <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
     <a href="#"><i class="fa-brands fa-tiktok fa-3x"></i></a>
 </div>
-<div id="copyright"><p>Krav Maga Europe Team &#169;</p></div>
+<div id="copyright">
+    <p>Krav Maga Europe Team &#169;</p>
+</div>
+<script src="javascript/contact.js"></script>
 </body>
 </html>
